# jstolarek.github.io

./: .gitignore  README.md  cabal.project  index.md  jstolarek.cabal
css/: default.css
docs/: 404.html  blog.html  feed.xml  index.html  personal.html  projects.html  publications.html
docs/blog/: 2012-03-20-diving-into-functional-programming.html  2012-03-20-installing-ghc-on-opensuse-linux.html  2012-03-22-recursion-is-good.html  2012-03-25-function-composition-and-dollar-operator-in-haskell.html  2012-03-26-compiling-ghc-just-for-fun.html  2012-03-28-a-glance-at-some-haskell-books.html  2012-04-01-haskell-communities-and-activities-report-21st-edition-an-overview.html  2012-04-04-7-languages-in-7-weeks-book-review.html  2012-04-07-saturday-web-overview.html  (+71 more)
drafts/: websites.md
files/: eisenberg_stolarek_promotion.bib  emrich_lindley_stolarek_cheney_coates_freezeml.bib  stolarek_adaptive_synthesis_of_a_wavelet_transform.bib  stolarek_adaptive_wavelet_synthesis_for_watermarking.bib  stolarek_byczkowska_wavelet_adaptation_based_on_signal_processing_outcome.bib  stolarek_cheney_language_integrated_provenance_in_haskell.bib  stolarek_lipinski_improving_digital_watermarking_fidelity_using_fast_neural_network.bib  stolarek_owd2009.bib  stolarek_peyton-jones_eisenberg_injectivity.bib  stolarek_praca_magisterska.bib  stolarek_properties_of_lattice_structure_part1.bib  stolarek_rozprawa_doktorska.bib
pages/: 404.md  blog.md  index.md  links.md  personal.md  projects.md  publications.md  research.md
src/: Site.hs
templates/: default.html  post-list.html  post.html
(+295 files in other folders)
