name:               jstolarek
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

synopsis:           Jan Stolarek's personal website
license:            GPL-3
license-file:       LICENSE
author:             Jan Stolarek
maintainer:         Jan Stolarek <jan.stolarek@binarapps.com>
bug-reports:        https://github.com/jstolarek/jstolarek

source-repository this
  type:     git
  location: https://github.com/jstolarek/jstolarek.git

executable site
  hs-source-dirs:   src
  main-is:          Site.hs
  build-depends:    base,
                    hakyll
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
