name:               jstolarek
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

synopsis:           Jan Stolarek's personal website
author:             Jan Stolarek
maintainer:         Jan Stolarek <jan.stolarek@binarapps.com>
bug-reports:        https://github.com/jstolarek/jstolarek.github.io

source-repository this
  type:     git
  location: https://github.com/jstolarek/jstolarek.github.io.git

executable site
  hs-source-dirs:   src
  main-is:          Site.hs
  build-depends:    base,
                    hakyll == 4.16.2.2
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
